# WishTeleBot

./: .gitignore  pyproject.toml
bot/: crud.py  db.py  models.py  server.py
